017-network-policies/network-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-deny-all
  namespace: web
spec:
  podSelector:
    matchLabels: 
      app: web-app
  ingress: []
  egress: []
